javadoc warnings remove tags with no description, remove empty p tags, moved incorrect javadoc to the righ place, missing @Deprecated
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>